--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,13 @@
   "bugs": {
     "url": "https://github.com/nlubawski/projeto14-livrariat5-back/issues"
   },
-  "homepage": "https://github.com/nlubawski/projeto14-livrariat5-back#readme"
+  "homepage": "https://github.com/nlubawski/projeto14-livrariat5-back#readme",
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongo": "^0.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
