--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
   },
   "homepage": "https://github.com/nlubawski/projeto14-livrariat5-back#readme",
   "dependencies": {
-    "chalk": "^5.0.1",
     "bcrypt": "^5.0.1",
+    "chalk": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
-    "mongo": "^0.1.0"
+    "mongo": "^0.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
